--- a/src/styles/wrapper.css
+++ b/src/styles/wrapper.css
@@ -1,6 +1,6 @@
 .wrapper {
-  width: 35em !important;
-  max-width: 100%;
+  max-width: 640px;
+  width: calc(100% - 48px);
   margin: 0 auto;
   padding: 15px 0 0;
 }
